--- a/example_app/CMakeLists.txt
+++ b/example_app/CMakeLists.txt
@@ -1,6 +1,8 @@
 cmake_minimum_required(VERSION 3.1 FATAL_ERROR)
 project(example_app)
 
+set(CMAKE_CXX_STANDARD 14)
+
 find_package(Torch REQUIRED)
 
 add_subdirectory(warp_perspective)
